<resources>
    <string name="app_name">ViveInmobiliaria</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="editText_email_login">Email</string>
    <string name="button_login">Iniciar Sesión</string>
    <string name="editText_password_login">Contraseña</string>
    <string name="button_loginAregistro">¿No tienes cuenta? Regístrate</string>
    <string name="button_registro">Registro</string>
    <string name="button_registroAlogin">¿Ya tienes cuenta? Inicia Sesión</string>
    <string name="editText_reppassword_registro">Repite Contraseña</string>
    <string name="sharedpreferences_filename">login</string>
    <string name="jwt_key">JWT_KEY</string>
    <string name="title_activity_inmuebles">Inmuebles</string>
    <string name="title_home"></string>
    <string name="title_dashboard"></string>
    <string name="title_notifications"></string>
    <string name="CambiarPass">Cambiar Contraseña</string>
    <string name="Logout">Logout</string>
    <string name="Password">Contraseña</string>
    <string name="NuevaPass">Nueva Contraseña</string>
    <string name="Cambiar">Cambiar</string>
    <string name="NombrePerfil">Nombre de perfil</string>
    <string name="EmailPerfil">Email</string>
    <string name="RepetirPass">Repetir contraseña</string>
    <string name="dialog_message">¿Estás Seguro?</string>
    <string name="dialog_title">¿Quieres cerrar sesión?</string>
    <string name="dialog_title2">¿Quieres borrar la propiedad?</string>
    <string name="ok">Salir</string>
    <string name="cancel">Cancelar</string>
    <string name="titulo_propiedad">Título*</string>
    <string name="descripcion_propiedad">Descripción*</string>
    <string name="ready_bt_label">Hecho</string>
    <string name="region_dialog">Región: </string>
    <string name="province_dialog">Provincia: </string>
    <string name="city_dialog">Ciudad: </string>
    <string name="list_title">Title</string>
    <string name="price">Price</string>
    <string name="size">Size</string>
    <string name="city">Ciudad</string>
    <string name="province">Provincia</string>
    <string name="button_choosecity">Ubicación</string>
    <string name="editText_price_create">Precio*</string>
    <string name="editText_CP_create">Código Postal*</string>
    <string name="editText_direccion_create">Dirección*</string>
    <string name="editText_habitaciones_create">Nº Habitaciones*</string>
    <string name="button_create_inmueble">Subir Inmueble</string>
    <string name="tituloCreate">Subiendo Inmueble</string>
    <string name="action_editPhoto">Editar Imágenes</string>
    <string name="action_eliminarPropiedad">Eliminar</string>
    <string name="action_editarPropiedad">Editar</string>
    <string name="title_activity_mapa">Map</string>
    <string name="action_map">Mapa</string>
    <string name="filter">Aplicar filtro</string>
    <string name="button_filter_cancel">Cancel</string>
    <string name="title_filter">Filtros</string>
    <string name="filter_city">Ciudad...</string>
    <string name="filter_rango_precio">Rango de precio</string>
    <string name="editText_filter_minprice">Mínimo...</string>
    <string name="editText_filter_maxprice">Máximo...</string>
    <string name="textView_lugar">Lugar</string>
    <string name="editText_filtrar_province">Provincia...</string>
    <string name="textView_numeroHabitaciones">Número de habitaciones</string>
    <string name="textView_tamanio">Tamaño</string>
    <string name="editText_filter_minSize">Ej:50</string>
    <string name="editText_filtrar_address">Dirección...</string>
    <string name="textView_ubi">Ubicación</string>
    <string name="editText_filter_maxdistance">Distancia..</string>
    <string name="button_filter_myubi">Buscar mi ubicacion</string>
    <string name="filter_list">Filtrar</string>
</resources>
